--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,8 @@
 <div class="row" sec:authorize="!isAuthenticated()">
     <div class="col-md-12">
 
-        <div th:if="${param.error}" class="alert alert-danger">Invalid Username or Password</div>
+        <div th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']?.message} == 'Bad credentials'" class="alert alert-danger">Invalid Username or Password</div>
+        <div th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']?.message} == 'User account is locked'" class="alert alert-danger">User Account is locked</div>
         <div th:if="${param.logout}" class="alert alert-success">You Have Successfully Logged Out</div>
         <form th:action="@{/login}" method="post">
             <label for="username">Username:</label>
@@ -31,8 +32,6 @@
         <p><a th:href="@{/logout}">Logout</a></p>
     </div>
 </div>
-
-
 <div class="row">
     <div class="col-md-12">
         <img class="img-responsive" src="../static/resources/images/brewery.png" th:src="@{/resources/images/brewery.png}"/>
