--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,10 +11,11 @@
 
 <div class="row" sec:authorize="!isAuthenticated()">
     <div class="col-md-12">
-
         <div th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']?.message} == 'Bad credentials'" class="alert alert-danger">Invalid Username or Password</div>
-        <div th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']?.message} == 'User account is locked'" class="alert alert-danger">User Account is locked</div>
-        <div th:if="${param.logout}" class="alert alert-success">You Have Successfully Logged Out</div>
+
+        <div th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']?.message} == 'User account is locked'" class="alert alert-danger">User Account is Locked.</div>
+
+        <div th:if="${param.logout}" class="alert alert-success">You Have Logged Out</div>
         <form th:action="@{/login}" method="post">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" autofocus="true" autocomplete="off">
@@ -22,7 +23,7 @@
             <input type="password" id="password" name="password" autofocus="true" autocomplete="off">
             <input type="submit" value="Log In">
             <label for="remember-me">Remember Me:</label>
-            <input type="checkbox" id="remember-me" name="remember-me">
+            <input type="checkbox" id="remember-me" name="remember-me" />
         </form>
     </div>
 </div>
@@ -32,6 +33,9 @@
         <p><a th:href="@{/logout}">Logout</a></p>
     </div>
 </div>
+
+<!--<h2 th:text="${session['SPRING_SECURITY_LAST_EXCEPTION']?.message}"></h2>-->
+
 <div class="row">
     <div class="col-md-12">
         <img class="img-responsive" src="../static/resources/images/brewery.png" th:src="@{/resources/images/brewery.png}"/>
